--- a/deployment/database/aurora/aurora-global-standby-cluster.yml
+++ b/deployment/database/aurora/aurora-global-standby-cluster.yml
@@ -184,7 +184,7 @@ Resources:
       DBInstanceIdentifier: !Sub '${NamingPrefix}-${ClusterName}${Env}-2'
       DBInstanceClass: !Ref MachineType
       DBSubnetGroupName: !Ref SubnetGroup
-      Engine: aurora-mysql
+      Engine: aurora-mysql      
       PubliclyAccessible: false
       MonitoringRoleArn: !Sub '{{resolve:secretsmanager:mr-app/${NamingPrefix}-${GlobalClusterIdentifier}-MonitoringIAMRoleArn${Env}}}'
       MonitoringInterval: 1
@@ -292,6 +292,16 @@ Resources:
       Description: !Sub 'DBCluster Arn for ${NamingPrefix}'
       KmsKeyId: "alias/aws/secretsmanager"
       SecretString: !GetAtt DBCluster.DBClusterArn
+      ReplicaRegions:
+        - Region: us-east-1
+  
+  DBClusterEndpoint:
+    Type: AWS::SecretsManager::Secret
+    Properties:
+      Name: !Sub 'mr-app/${NamingPrefix}-${AWS::Region}-${GlobalClusterIdentifier}-endpoint${Env}'
+      Description: !Sub 'DBCluster Endpoint for ${NamingPrefix}'
+      KmsKeyId: "alias/aws/secretsmanager"
+      SecretString: !GetAtt DBCluster.Endpoint.Address
       ReplicaRegions:
         - Region: us-east-1
   
