--- a/deployment/database/crdr-reconciliation/src/out.yaml
+++ b/deployment/database/crdr-reconciliation/src/out.yaml
@@ -83,7 +83,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: reconciliation-orders.lambda_handler
-      CodeUri: s3://lambda-artifacts-eddbc25f92c79902/28ba6259791eb8840ce36b92a6b2253e
+      CodeUri: s3://lambda-artifacts-eddbc25f92c79902/85a55c9a38867b94fed2d757ecb2be76
       Runtime: python3.12
       Architectures:
       - x86_64
@@ -100,6 +100,12 @@ Resources:
         - Fn::Sub: '{{resolve:ssm:Subnet2}}'
         - Fn::Sub: '{{resolve:ssm:Subnet3}}'
         Ipv6AllowedForDualStack: false
+      Environment:
+        Variables:
+          user_name:
+            Fn::Sub: '{{resolve:secretsmanager:mr-app/orders-${GlobalClusterIdentifier}-UserCredentials${Env}:SecretString:username}}'
+          password:
+            Fn::Sub: '{{resolve:secretsmanager:mr-app/orders-${GlobalClusterIdentifier}-UserCredentials${Env}:SecretString:password}}'
       Layers:
       - Ref: libs
       Policies:
@@ -187,19 +193,64 @@ Resources:
               Fn::Sub: '{{SnapshotArn}}'
             KmsKeyId:
               Fn::Sub: '{{resolve:secretsmanager:mr-app/${NamingPrefix}-${TargetRegion}-${GlobalClusterIdentifier}-Snapshot-KeyArn${Env}}}'
+            ServerlessV2ScalingConfiguration:
+              MinCapacity: 1
+              MaxCapacity: 8
           outputs:
           - Name: ReconciliationClusterId
-            Selector: $. DBCluster.DBClusterIdentifier
+            Selector: $.DBCluster.DBClusterIdentifier
             Type: String
           - Name: ReconciliationClusterArn
-            Selector: $. DBCluster.DBClusterArn
+            Selector: $.DBCluster.DBClusterArn
+            Type: String
+          - Name: ReconciliationClusterEndpoint
+            Selector: $.DBCluster.Endpoint
             Type: String
         - name: waitForDBCompletion
           action: aws:waitForAwsResourceProperty
           inputs:
             Service: rds
+            Api: DescribeDBClusters
             DBClusterIdentifier: '{{RestoreSnapshot.ReconciliationClusterId}}'
             PropertySelector: $.DBClusters[0].Status
+            DesiredValues:
+            - available
+        - name: CreateDBInstance
+          action: aws:executeAwsApi
+          inputs:
+            Service: rds
+            Api: CreateDBInstance
+            DBInstanceIdentifier:
+              Fn::Join:
+              - '-'
+              - - orders-recociliation-db-Instance
+                - Ref: TargetRegion
+                - Fn::Select:
+                  - 0
+                  - Fn::Split:
+                    - '-'
+                    - Fn::Select:
+                      - 2
+                      - Fn::Split:
+                        - /
+                        - Ref: AWS::StackId
+            DBClusterIdentifier: '{{RestoreSnapshot.ReconciliationClusterId}}'
+            Engine: aurora-mysql
+            DBInstanceClass: db.serverless
+          outputs:
+          - Name: ReconciliationDBInstanceId
+            Selector: $.DBInstance.DBInstanceIdentifier
+            Type: String
+          - Name: ReconciliationDBInstanceArn
+            Selector: $.DBInstance.DBInstanceArn
+            Type: String
+        - name: waitForDBInstance
+          action: aws:waitForAwsResourceProperty
+          inputs:
+            Service: rds
+            Api: DescribeDBInstances
+            DBInstanceIdentifier: '{{CreateDBInstance.ReconciliationDBInstanceId}}'
+            PropertySelector: $.DBInstances[0].DBInstanceStatus
             DesiredValues:
             - available
         - name: ExecuteLambda
@@ -211,13 +262,9 @@ Resources:
             FunctionName:
               Ref: LambdaFunction
             InputPayload:
-              source_db_arn: '{{RestoreSnapshot.ReconciliationClusterArn}}'
-              target_db_arn:
-                Fn::Sub: '{{resolve:secretsmanager:mr-app/orders-${TargetRegion}-${GlobalClusterIdentifier}${Env}}}'
-              user_name:
-                Fn::Sub: '{{resolve:secretsmanager:mr-app/orders-${GlobalClusterIdentifier}-UserCredentials${Env}:SecretString:username}}'
-              password:
-                Fn::Sub: '{{resolve:secretsmanager:mr-app/orders-${GlobalClusterIdentifier}-UserCredentials${Env}:SecretString:password}}'
+              source_db_endpoint: '{{RestoreSnapshot.ReconciliationClusterEndpoint}}'
+              target_db_endpoint:
+                Fn::Sub: '{{resolve:secretsmanager:mr-app/orders-${TargetRegion}-${GlobalClusterIdentifier}-endpoint${Env}}}'
               db_name: orders
 Outputs:
   AutomationDocument:
