additional bug fixes reconciliation ssm  & lamda

--- a/deployment/database/crdr-reconciliation/src/crdr-roles.yaml
+++ b/deployment/database/crdr-reconciliation/src/crdr-roles.yaml
@@ -94,14 +94,21 @@ Resources:
                       - !Ref TargetRegion
                       - !Ref AWS::AccountId
                       - "cluster"
-                      - "orders-recociliation-db-cluster-*"
+                      - "orders-reconciliation-db-cluster-*"
                   - Fn::Join:
                     - ":"
                     - - "arn:aws:rds"
                       - !Ref TargetRegion
                       - !Ref AWS::AccountId
                       - "db"
-                      - "orders-recociliation-db-instance-*"
+                      - "orders-reconciliation-db-instance-*"
+                  - Fn::Join:
+                    - ":"
+                    - - "arn:aws:rds"
+                      - !Ref TargetRegion
+                      - !Ref AWS::AccountId
+                      - "subgrp"
+                      - "orders-reconciliation-db-cluster-subnet-group"
 
               - Effect: Allow
                 Action: ["rds:DescribeDBClusterSnapshots"]
