--- a/deployment/database/crdr-reconciliation/src/restore-reconcile-orders-ssm.yaml
+++ b/deployment/database/crdr-reconciliation/src/restore-reconcile-orders-ssm.yaml
@@ -20,13 +20,22 @@ Parameters:
     Description: Enter the Standby Region
     Default: "us-west-2"
   DBClusterIdentifier:
-    Default: recociliation-db-cluster
+    Default: reconciliation-db-cluster
     Type: String
   GlobalClusterIdentifier:
     Default: global-db-cluster
     Type: String
 
 Resources: 
+  SubnetGroup:
+    Type: AWS::RDS::DBSubnetGroup
+    Properties:
+      SubnetIds:
+        - !Sub '{{resolve:ssm:Subnet1${Env}}}'
+        - !Sub '{{resolve:ssm:Subnet2${Env}}}'
+        - !Sub '{{resolve:ssm:Subnet3${Env}}}'
+      DBSubnetGroupDescription: "orders-subnet-group"
+      DBSubnetGroupName: !Sub '${NamingPrefix}-${DBClusterIdentifier}-subnet-group${Env}'
   LambdaSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -127,7 +136,7 @@ Resources:
           - Effect: Allow
             Action: ["rds:*"]              
             Resource: 
-              - !Sub 'arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:orders-recociliation-db-cluster-*'
+              - !Sub 'arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:orders-reconciliation-db-cluster-*'
               - !Sub '{{resolve:secretsmanager:mr-app/orders-${TargetRegion}-global-db-cluster${Env}}}'
   libs:
     Type: AWS::Serverless::LayerVersion
@@ -174,7 +183,7 @@ Resources:
                 DBClusterIdentifier:
                   Fn::Join:
                   - "-"
-                  - - "orders-recociliation-db-cluster"
+                  - - "orders-reconciliation-db-cluster"
                     - !Ref TargetRegion         
                     - Fn::Select:
                       - 0
@@ -187,10 +196,18 @@ Resources:
                             - !Ref AWS::StackId
                 Engine: aurora-mysql
                 SnapshotIdentifier : !Sub "{{SnapshotArn}}"
+                EnableIAMDatabaseAuthentication: true
                 KmsKeyId:  !Sub '{{resolve:secretsmanager:mr-app/${NamingPrefix}-${TargetRegion}-${GlobalClusterIdentifier}-Snapshot-KeyArn${Env}}}' 
                 ServerlessV2ScalingConfiguration:
                   MinCapacity: 1
                   MaxCapacity: 8
+                DBSubnetGroupName: !Ref SubnetGroup
+                VpcSecurityGroupIds: 
+                  - !Sub '{{resolve:ssm:orders-aurora-mysql-sg-${AWS::Region}${Env}}}'
+                DeletionProtection: false
+                Tags:
+                  - Key: "NamingPrefix"
+                    Value: !Ref NamingPrefix
               outputs:
                 - Name: ReconciliationClusterId
                   Selector: $.DBCluster.DBClusterIdentifier 
@@ -220,7 +237,7 @@ Resources:
                 DBInstanceIdentifier:
                   Fn::Join:
                   - "-"
-                  - - "orders-recociliation-db-Instance"
+                  - - "orders-reconciliation-db-Instance"
                     - !Ref TargetRegion         
                     - Fn::Select:
                       - 0
