--- a/deployment/database/crdr-reconciliation/src/restore-reconcile-orders-ssm.yaml
+++ b/deployment/database/crdr-reconciliation/src/restore-reconcile-orders-ssm.yaml
@@ -35,7 +35,7 @@ Resources:
         - !Sub '{{resolve:ssm:Subnet2${Env}}}'
         - !Sub '{{resolve:ssm:Subnet3${Env}}}'
       DBSubnetGroupDescription: "orders-subnet-group"
-      DBSubnetGroupName: !Sub '${NamingPrefix}-${DBClusterIdentifier}-subnet-group${Env}'
+      DBSubnetGroupName: 'orders-recon-dbcluster-subnet-group'
   LambdaSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -180,20 +180,7 @@ Resources:
               inputs:
                 Service: rds
                 Api: RestoreDBClusterFromSnapshot                 
-                DBClusterIdentifier:
-                  Fn::Join:
-                  - "-"
-                  - - "orders-reconciliation-db-cluster"
-                    - !Ref TargetRegion         
-                    - Fn::Select:
-                      - 0
-                      - Fn::Split:
-                        - "-"
-                        - Fn::Select:
-                          - 2
-                          - Fn::Split:
-                            - "/"
-                            - !Ref AWS::StackId
+                DBClusterIdentifier: "orders-recon-dbcluster-{{automation:EXECUTION_ID}}"
                 Engine: aurora-mysql
                 SnapshotIdentifier : !Sub "{{SnapshotArn}}"
                 EnableIAMDatabaseAuthentication: true
@@ -234,20 +221,7 @@ Resources:
               inputs:
                 Service: rds
                 Api: CreateDBInstance                 
-                DBInstanceIdentifier:
-                  Fn::Join:
-                  - "-"
-                  - - "orders-reconciliation-db-Instance"
-                    - !Ref TargetRegion         
-                    - Fn::Select:
-                      - 0
-                      - Fn::Split:
-                        - "-"
-                        - Fn::Select:
-                          - 2
-                          - Fn::Split:
-                            - "/"
-                            - !Ref AWS::StackId
+                DBInstanceIdentifier: "orders-recon-dbinstance-{{automation:EXECUTION_ID}}" 
                 DBClusterIdentifier: '{{RestoreSnapshot.ReconciliationClusterId}}'
                 Engine: aurora-mysql
                 DBInstanceClass: "db.serverless"                                
