--- a/deployment/database/crdr-reconciliation/src/crdr-roles.yaml
+++ b/deployment/database/crdr-reconciliation/src/crdr-roles.yaml
@@ -94,49 +94,26 @@ Resources:
                       - !Ref TargetRegion
                       - !Ref AWS::AccountId
                       - "cluster"
-                      - "orders-reconciliation-db-cluster-*"
+                      - "orders-recon-dbcluster-*"
                   - Fn::Join:
                     - ":"
                     - - "arn:aws:rds"
                       - !Ref TargetRegion
                       - !Ref AWS::AccountId
                       - "db"
-                      - "orders-reconciliation-db-instance-*"
+                      - "orders-recon-dbinstance-*"
                   - Fn::Join:
                     - ":"
                     - - "arn:aws:rds"
                       - !Ref TargetRegion
                       - !Ref AWS::AccountId
                       - "subgrp"
-                      - "orders-reconciliation-db-cluster-subnet-group"
+                      - "orders-recon-dbcluster-subnet-group"
 
               - Effect: Allow
                 Action: ["rds:DescribeDBClusterSnapshots"]
                 Resource: 
-                  - "*"
-              - Effect: Allow
-                Action: ["rds:CopyDBClusterSnapshot", "rds:AddTagsToResource"]
-                Resource: 
-                  - Fn::Join:
-                    - ":"
-                    - - "arn:aws:rds"
-                      - !Ref SourceRegion
-                      - !Ref AWS::AccountId
-                      - "cluster-snapshot"
-                      - Fn::Join:
-                        - "-"
-                        - - !Sub '{{resolve:secretsmanager:mr-app/orders-${SourceRegion}-DBClusterIdentifier${Env}}}' 
-                          - 'db-snapshot-*'
-                  - Fn::Join:                    
-                    - ":"
-                    - - "arn:aws:rds"
-                      - !Ref TargetRegion
-                      - !Ref AWS::AccountId
-                      - "cluster-snapshot"
-                      - Fn::Join:
-                        - "-"
-                        - - !Sub '{{resolve:secretsmanager:mr-app/orders-${SourceRegion}-DBClusterIdentifier${Env}}}' 
-                          - 'db-snapshot-*'
+                  - "*"              
               - Effect: Allow
                 Action: ["kms:DescribeKey","kms:CreateGrant"]
                 Resource:  
