fix deploy and rollbacl

--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -222,22 +222,20 @@ client-standby: standby_infrastructure
 
 restore-reconciliation: primary_infrastructure primary_region_orders-db standby_infrastructure standby_region_orders-db
 	@echo "Creating IAM Role for restore-reconcliation"
-	@aws cloudformation deploy --template ./database/crdr-reconciliation/src/crdr-roles.yaml --capabilities CAPABILITY_NAMED_IAM --stack-name crdr-roles${ENV}  --region ${PRIMARY_REGION}
+	@aws cloudformation deploy --template ./database/crdr-reconciliation/src/crdr-roles.yaml --parameter-overrides Env=${ENV} --capabilities CAPABILITY_NAMED_IAM --stack-name crdr-roles${ENV}  --region ${PRIMARY_REGION}
 	@aws cloudformation wait stack-create-complete --stack-name crdr-roles${ENV}  --region ${PRIMARY_REGION}
 	@echo "Creating SSM automation runbook in ${PRIMARY_REGION}"
-	@aws cloudformation deploy --template ./database/crdr-reconciliation/src/cross-region-orders-db-ssm.yaml --capabilities CAPABILITY_NAMED_IAM --stack-name crdr-orders-ssm${ENV} --region ${PRIMARY_REGION}
+	@aws cloudformation deploy --template ./database/crdr-reconciliation/src/cross-region-orders-db-ssm.yaml --parameter-overrides Env=${ENV} --capabilities CAPABILITY_NAMED_IAM --stack-name crdr-orders-ssm${ENV} --region ${PRIMARY_REGION}
+	@aws cloudformation wait stack-create-complete --stack-name crdr-orders-ssm${ENV} --region ${PRIMARY_REGION}
 
 	@echo "Creating reconciliation resources in ${STANDBY_REGION}"
-	@echo "Step 1:Creating S3 bucket ${STANDBY_REGION}"
-	$(eval BUCKET_NAME:="crdr-lambda-artifacts-"$(shell dd if=/dev/random bs=8 count=1 2>/dev/null | od -An -tx1 | tr -d ' \t\n' ))
-	@echo "S3 Bucket Name: $(BUCKET_NAME)"
-	$(eval s3:=$(shell aws s3 mb s3://$(BUCKET_NAME) --region us-west-2))
-
-	@echo "Step 2:Building Lambda Layers"
+	@echo "Step 1:Building Lambda Layers"
 	./build-lambda-layer.sh
-	@echo "Step 3:Deploying Lambda and SSM"
-	@aws cloudformation package --template-file ./database/crdr-reconciliation/src/restore-reconcile-orders-ssm.yaml --region ${STANDBY_REGION} --s3-bucket $(BUCKET_NAME) --output-template-file ./database/crdr-reconciliation/src/out.yaml
-	@aws cloudformation deploy --template-file ./database/crdr-reconciliation/src/out.yaml --stack-name reconciliation-orders-ssm${ENV} --region ${STANDBY_REGION} --capabilities CAPABILITY_NAMED_IAM
+	@echo "Step 2:Deploying Lambda and SSM Runbook"
+	$(eval result:=$(shell aws ssm get-parameter --name canaryBucketName$(ENV) --region $(STANDBY_REGION) --query "Parameter.Value" --output text ))
+	@aws cloudformation package --template-file ./database/crdr-reconciliation/src/restore-reconcile-orders-ssm.yaml --region ${STANDBY_REGION} --s3-bucket $(result) --output-template-file ./database/crdr-reconciliation/src/out.yaml
+	@aws cloudformation deploy --template-file ./database/crdr-reconciliation/src/out.yaml --stack-name reconciliation-orders-ssm${ENV} --region ${STANDBY_REGION} --capabilities CAPABILITY_NAMED_IAM --parameter-overrides Env=${ENV}
+	@aws cloudformation wait stack-create-complete --stack-name reconciliation-orders-ssm${ENV} --region ${STANDBY_REGION} 
 
 clean:
 	@echo "To remove all stacks deployed by this solution, run 'make destroy-all'"
@@ -249,14 +247,14 @@ test-creds:
 destroy-all: destroy-peer 
 	@echo "Removed all cloudformation stacks!!!"
 
-destory-restore-reconciliation-ssm:  	
+destroy-restore-reconciliation-ssm:  	
 	@echo "Deleteing SSM automation runbook in ${PRIMARY_REGION}"
 	@aws cloudformation delete-stack --stack-name crdr-orders-ssm${ENV} --region ${PRIMARY_REGION}
 	@aws cloudformation delete-stack --stack-name reconciliation-orders-ssm${ENV} --region ${STANDBY_REGION}	
 	@aws cloudformation wait stack-delete-complete --stack-name reconciliation-orders-ssm${ENV} --region ${STANDBY_REGION}
 	@echo "Deleteing IAM Role for restore-reconcliation"
 	@aws cloudformation delete-stack --stack-name crdr-roles${ENV} --region ${PRIMARY_REGION}
-	$(shell aws s3api list-buckets --query 'Buckets[].[Name]' --output text | grep "^crdr-lambda-artifacts-" | xargs -n1 -IB aws s3 rb s3://B --force)
+#	$(shell aws s3api list-buckets --query 'Buckets[].[Name]' --output text | grep "^crdr-lambda-artifacts-" | xargs -n1 -IB aws s3 rb s3://B --force)
 
 destroy-ecr-primary: destroy-apps-primary
 	@echo "Deleting ECR Repos..."
@@ -276,7 +274,7 @@ destroy-ecr-standby: destroy-apps-standby
 	@aws ecr delete-repository --force --repository-name assets${ENV} --region $(STANDBY_REGION) --no-cli-pager || true
 	@aws ecr delete-repository --force --repository-name orders${ENV} --region $(STANDBY_REGION) --no-cli-pager || true
 
-destroy-global_routing: destroy-canaries-standby destroy-canaries-primary destroy-failover-standby destroy-failover-primary destory-restore-reconciliation-ssm
+destroy-global_routing: destroy-canaries-standby destroy-canaries-primary destroy-failover-standby destroy-failover-primary destroy-restore-reconciliation-ssm
 	@echo "Deleting global routing stack..."
 	@aws cloudformation delete-stack --stack-name gr${ENV} --region ${PRIMARY_REGION}
 	@aws cloudformation wait stack-delete-complete --stack-name gr${ENV} --region ${PRIMARY_REGION}
