add missing env

--- a/deployment/database/crdr-reconciliation/src/crdr-roles.yaml
+++ b/deployment/database/crdr-reconciliation/src/crdr-roles.yaml
@@ -121,7 +121,7 @@ Resources:
   CrossRegionSnapshotCopySSMAutomationRoleArn:
     Type: AWS::SecretsManager::Secret
     Properties:
-      Name: !Sub 'mr-app/CRDRSSMAutomationRoleArn'
+      Name: !Sub 'mr-app/CRDRSSMAutomationRoleArn${Env}'
       Description: "Arn for CrossRegionSnapshotCopySSMAutomationRole"
       KmsKeyId: "alias/aws/secretsmanager"
       SecretString: !GetAtt CrossRegionSnapshotCopySSMAutomationRole.Arn
