--- a/deployment/database/crdr-reconciliation/src/restore-reconcile-orders-ssm.yaml
+++ b/deployment/database/crdr-reconciliation/src/restore-reconcile-orders-ssm.yaml
@@ -173,7 +173,7 @@ Resources:
             description: "(Required) Arn of the cross region DR snapshot"
             default: ""
         schemaVersion: '0.3'
-        assumeRole: !Sub '{{resolve:secretsmanager:mr-app/CRDRSSMAutomationRoleArn}}'   
+        assumeRole: !Sub '{{resolve:secretsmanager:mr-app/CRDRSSMAutomationRoleArn${Env}}}'   
         mainSteps:
             - name: RestoreSnapshot 
               action: 'aws:executeAwsApi'
